fix: mobile alignment for categories, goals, and reports

--- a/css/styles.css
+++ b/css/styles.css
@@ -1500,6 +1500,9 @@ select:focus {
     grid-column: span 1 !important;
   }
 
+  .card-span-4,
+  .card-span-6,
+  .card-span-8,
   .card-span-12 {
     grid-column: span 1 !important;
   }
