--- a/css/styles.css
+++ b/css/styles.css
@@ -931,6 +931,8 @@ select {
   font-size: 1rem;
   color: var(--text-primary);
   font-weight: 500;
+  width: 100%;
+  max-width: 100%;
 }
 
 .input-field:hover,
